src/style.css
/* ... */
form.styled button, button.styled, .button {
	text-decoration: none;
	display: inline-block;
	padding: calc(var(--padding-std) / 2) var(--padding-std);
	cursor: pointer;
	background: var(--liberal-red);
	color: white;
	border-style: none;
	border-radius: 6px;
	font-family: inherit;
	font-size: inherit;
	font-weight: bolder;
	transition: background 0.2s;
	text-shadow: 0 1px 0 rgb(0 0 0 / 25%);

	&:hover {
		background: var(--liberal-red-shade-1);
	}
	&:active {
		background: var(--liberal-red-shade-2);
		transition-duration: 0s;
	}
}

form.styled {
	display: grid;
	gap: var(--padding-std);

	fieldset {
		display: grid;
		row-gap: calc(var(--padding-std) / 4);
	}

	input:is([type="text"], [type="email"], [type="tel"]), textarea, select {
		font-family: inherit;
		font-size: inherit;
		border-radius: 3px;
		border: 1px solid color-mix(in lch, var(--liberal-grey), white 50%);
		padding: calc(var(--padding-std) / 2);
		background: white;
		color: black;
	}

	input[type="radio"] {
		width: 1.2rem;
		height: 1.2rem;
	}

	.option-grid {
		display: grid;
		grid-template-columns: auto 1fr;
		gap: calc(var(--padding-std) / 4) calc(var(--padding-std) / 2);
		align-items: center;
	}
}

.unstyled {
	all: unset;
}
button.unstyled {
	cursor: pointer;
}
:is(ul, ol, dl, address).unstyled {
	display: block;
}
:is(ul, ol, dl).unstyled > :is(li, dt, dd) {
	all: unset;
	display: block;
}

dl.grid {
	display: grid;
	grid-template-columns: auto 1fr;
	gap: 0 1rem;

	& > dt {
		justify-self: end;
	}
	& > dd {
		justify-self: start;
	}
}

#skip-link {
	position: absolute;
	left: 0;
	top: 0;
	background: var(--accent-steel);
	padding: var(--padding-std);
	color: white;
	z-index: 10;
}

#header {
	position: sticky;
	z-index: 1;
	top: 0;
	left: 0;

	.content {
		background: var(--liberal-red);
		color: white;
		padding: var(--padding-std);
	}

	.flex {
		display: flex;
		gap: calc(var(--padding-std) * 2);
		justify-content: space-between;
		align-items: center;
	}

	.logo {
		width: var(--header-logo-size);
		height: var(--header-logo-size);
	}

	#title-lockup {
		display: flex;
		gap: var(--padding-std);
		flex-shrink: 0;

		h1 {
			font-size: clamp(2rem, 9.6vw, 2.5rem);
			line-height: 1;

			display: flex;
			flex-direction: column;
			align-items: center;

			strong {
				font-style: normal;
				font-weight: 900;
				font-family: var(--font-base);
			}
			small {
				font-size: 0.36em;
				font-weight: normal;
			}
		}
	}

	#nav-toggle {
		@media only screen and (min-width: 46em) {
			display: none;
		}
	}

	#desktop-nav {
		display: none;

		@media only screen and (min-width: 46em) {
			display: block;
			font-family: var(--font-condensed);
			font-size: 1.2rem;

			a {
				text-decoration: none;
			}

			ul {
				display: flex;
				flex-wrap: wrap;
				gap: 0 var(--padding-std);
				justify-content: center;

				li {
					position: relative;

					&::after {
						content: "";
						display: block;
						position: absolute;
						top: 100%;
						left: 0;
						width: 100%;
						height: 0;
						border-bottom: 2px solid white;
						transform: scaleX(0);
						opacity: 0;
						transition-property: transform, opacity;
						transition-duration: 100ms;
					}

					&.is-current::after {
						opacity: 1;
						transform: scaleX(1);
					}
				}
			}
		}
	}
}

#main-nav {
	display: grid;
	background: var(--liberal-red-shade-1);
	color: white;
	height: calc(100vh - var(--header-height));
	width: 100%;
	border-style: none;
	padding: var(--padding-std);
	box-sizing: border-box;
	max-width: none;
	max-height: none;
	overflow: auto;
	overscroll-behavior: contain;
	position: absolute;
	left: 0;
	top: 100%;
	z-index: -1;
	transform: translateY(-100%);
	transition: transform 200ms;
	place-items: center;

	@media (prefers-reduced-motion) {
		transition-property: none;
	}

	&.is-open {
		transform: translateY(0);
	}

	&:focus-visible {
		outline: none;
	}

	ul {
		display: flex;
		flex-direction: column;
		gap: 1rem;
		font-size: 1.4rem;

		a {
			text-decoration: none;
		}
	}
}

#hero {
	position: relative;
	background: var(--accent-steel);
	color: white;
	overflow: hidden;

	& > * {
		position: relative;
	}

	.grid {
		display: grid;
		grid-template-columns: auto 1fr;
	}

	.bg-image-picture {
		position: absolute;
		width: 100%;
		height: 100%;
	}

	.bg-image {
		position: absolute;
		width: 100%;
		height: 100%;
		object-fit: cover;
	}

	.portrait-image-picture {
		align-self: end;
	}

	.portrait-image {
		margin-right: -12vw;
		margin-top: var(--padding-std);
		width: 42.67vw;
		height: auto;

		@media only screen and (min-width: 28em) {
			width: 48vw;
			max-width: 422px;
		}
	}

	.tagline {
		padding: var(--padding-std);
		padding-left: 0;
		align-self: center;
		text-align: center;
		display: block;
		text-transform: uppercase;
		line-height: 1;
		font-family: var(--font-condensed);
		font-size: 1.5rem;
		font-size: clamp(1.5rem, 5vw, 2rem);
		text-shadow: 0 1px 0 rgb(0 0 0 / 15%),
			0 0 8px rgb(0 0 0 / 35%),
			0 0 16px rgb(0 0 0 / 15%);

		svg {
			fill: currentColor;
			vertical-align: baseline;
			width: 1.2em;
			height: 1.2em;
			filter: drop-shadow(0 1px 0 rgb(0 0 0 / 10%))
				drop-shadow(0 0 8px rgb(0 0 0 / 20%))
				drop-shadow(0 0 16px rgb(0 0 0 / 10%));
		}

		big {
			font-family: var(--font-base);
			font-weight: 900;
			font-size: 2.5em;
			display: block;
		}

		small {
			font-size: 0.8em
		}
	}

	.swoop {
		position: absolute;
		overflow: visible;
	}

	#swoop-1 {
		left: 0;
		top: 0;
		width: 60%;
		height: 30%;
		stroke-width: 8px;
		fill: var(--liberal-red-shade-3);
		stroke: var(--liberal-red-shade-2);
	}

	#swoop-2 {
		right: 0;
		top: 0;
		width: 85%;
		height: 25%;
		fill: var(--liberal-red-shade-1);
	}
}
/* ... */

